# tachyon

./: Cargo.toml  README.md  flake.nix  result
benches/: benchmark.rs
nix/checks/: default.nix  deny.nix  fmt.nix
nix/formatter/: default.nix
nix/pkgs/: default.nix
nix/pkgs/tachyon/: default.nix
nix/shell/: default.nix
nix/shell/vale/: default.nix
src/lib/: mod.rs
